Fix alignment.

--- a/Resources/style.css
+++ b/Resources/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: Helvetica;
   background-color: white;
+  text-align: center;
 }
 
 .header {
